--- a/home.html
+++ b/home.html
@@ -55,9 +55,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Share End Price Predictor</h1>
-        <p>Use AI to predict future stock prices. A Part of SYNAPSE_TP.AI.</p>
-        <!-- Replaced the link with a button -->
+        <h1>Welcome to the Share Close Price Predictor</h1>
+        <p> Use AI to predict future stock prices. A Part of SYNAPSE_TP.AI.</p>
         <a href="/static/index.html" class="predictor-button">Go to Predictor</a>
     </div>
 </body>
